# rust-datadog-opentelemetry

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENT.md  Cargo.toml  DOCUMENTATION_ORGANIZATION.md  Dockerfile  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: security-audit.yml
datadog/: datadog-values.yaml
docs/: README.md
docs/architecture/: DATADOG_SDK_IMPLEMENTATION.md  OFFICIAL_PATTERN_UPDATE.md  TRACE_LOG_CORRELATION_IMPLEMENTATION.md  VERSION_COMPATIBILITY.md
docs/development/: COMPILATION_FIX_SUMMARY.md  CORRELATION_ANALYSIS.md  DATADOG_APM_UPDATE.md  ENV_MIGRATION_SUMMARY.md  FIELD_STRUCTURE_FIX.md  RUST_VERSION_UPDATE.md  TRACE_CORRELATION_COMPLETED.md
docs/guides/: APPLE_SILICON_BUILD.md  DEPLOYMENT.md  ENV_SETUP.md  IMPLEMENTING_TRACE_CORRELATION.md  PORT_FORWARD_GUIDE.md  QUICK_START_SECURITY.md  TRACE_LOG_CORRELATION.md
docs/security/: DEPENDENCIES.md  SECURITY.md  SECURITY_IMPROVEMENTS.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
scripts/: build-and-push.sh  create-secrets.sh  deploy.sh  load-test.sh  local-run.sh  port-forward.sh  security-audit.sh  setup-env.sh  test-api.sh  update-datadog-agent.sh  verify-correlation.sh
src/: main.rs  telemetry.rs  trace_context.rs
